--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^8.7.0",
     "natural": "^8.0.1",
     "node": "^20.18.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "stopword": "^3.1.1"
   }
 }
